--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphs",
-  "homepage": "http://gautamtata.github.io/watershed-guardians",
+  "homepage": "http://avsavani.github.io/watershed-guardians",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
